# morgue

./: .ghci  .gitignore  LICENSE  README.md  dump  morgue.cabal  stack.yaml  test.object
app/: Dump.hs  ICalImport.hs  Main.hs
src/: Agenda.hs  AgendaGenerator.hs  AgendaMain.hs  Format.hs  ICalParser.hs  Outline.hs  OutlineGenerator.hs  OutlineMain.hs  Util.hs  morgue.cabal
src/Data/Morgue/: Agenda.hs  AgendaGenerator.hs  AgendaTypes.hs  DumpNode.hs  Format.hs  ICalParser.hs  Options.hs  Outline.hs  OutlineGenerator.hs  Util.hs
src/Data/Morgue/Agenda/: Generator.hs  Main.hs  Render.hs  Time.hs  Types.hs
src/Data/Morgue/Outline/: Main.hs
templates/: both.mustache  element.mustache  main.mustache  subtree.mustache  time.mustache  timed.mustache  todo.mustache  tree.mustache
templates/colored/: both.mustache  element.mustache  time.mustache  timed.mustache  todo.mustache
templates/pango/: both.mustache  element.mustache  subtree.mustache  time.mustache  timed.mustache  todo.mustache
templates/plain/: element.mustache  time.mustache  timed.mustache  todo.mustache
test/: TemplateSpec.hs  ToJSONSpec.hs  test.md
tests/: MonoidSpec.hs  TemplateSpec.hs  ToJSONSpec.hs  longtest.md  notes.ical  test.md
