name:                morgue
version:             0.8.1.0
synopsis:            markdown org replacement
description:         A tool to parse markdown files in a specific format and generate agendas, todo-lists etc.
homepage:            http://www.github.com/ibabushkin/morgue
license:             GPL-3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           2015 Inokentiy Babushkin
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag documentation
  default:  False

library
  exposed-modules:     Data.Morgue.Agenda,
                       Data.Morgue.AgendaGenerator,
                       Data.Morgue.Outline,
                       Data.Morgue.OutlineGenerator,
                       Data.Morgue.Util,
                       Data.Morgue.Format
  hs-source-dirs:      src,
                       src/Data/Morgue 
  build-depends:       base >= 4.7.0,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       old-locale >= 1.0.0,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  default-language:    Haskell2010
  if flag(documentation)
      build-depends:   hscolour >= 1.20

executable morgue
  main-is:             AgendaMain.hs
  other-modules:       Agenda,
                       AgendaGenerator,
                       Util,
                       Format
  build-depends:       base >= 4.7.0,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       old-locale >= 1.0.0,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  hs-source-dirs:      src/Data/Morgue,
                       src
  default-language:    Haskell2010
  
executable morgue-outline
  main-is:             OutlineMain.hs
  other-modules:       Outline,
                       OutlineGenerator
  build-depends:       base >= 4.7.0,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  hs-source-dirs:      src,
                       src/Data/Morgue 
  default-language:    Haskell2010
