name:                morgue
version:             0.8.3.0
synopsis:            markdown org replacement
description:         A tool to parse markdown files in a specific format and generate agendas, todo-lists etc.
homepage:            http://www.github.com/ibabushkin/morgue
license:             GPL-3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           2015 Inokentiy Babushkin
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag documentation
  default:  False

library
  exposed-modules:     Data.Morgue.Agenda,
                       Data.Morgue.AgendaGenerator,
                       Data.Morgue.Options,
                       Data.Morgue.Outline,
                       Data.Morgue.OutlineGenerator,
                       Data.Morgue.Util,
                       Data.Morgue.Format
  hs-source-dirs:      src,
                       src/Data/Morgue 
  build-depends:       base >= 4.8 && <4.9,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       old-locale >= 1.0.0,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  --ghc-options:         -Wall
  default-language:    Haskell2010
  if flag(documentation)
      build-depends:   hscolour >= 1.20

executable morgue
  main-is:             AgendaMain.hs
  other-modules:       Data.Morgue.Agenda,
                       Data.Morgue.AgendaGenerator,
                       Data.Morgue.Util,
                       Data.Morgue.Format
  build-depends:       base >= 4.7.0,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       old-locale >= 1.0.0,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  hs-source-dirs:      src/Data/Morgue,
                       src
  --ghc-options:         -Wall
  default-language:    Haskell2010
  
executable morgue-outline
  main-is:             OutlineMain.hs
  other-modules:       Data.Morgue.Outline,
                       Data.Morgue.OutlineGenerator
                       Data.Morgue.Agenda,
                       Data.Morgue.AgendaGenerator,
                       Data.Morgue.Util,
                       Data.Morgue.Format
  build-depends:       base >= 4.7.0,
                       time >= 1.5.0.0,
                       pandoc >= 1.15.0,
                       parsec >= 3.1.9,
                       split >= 0.2.0,
                       ansi-terminal >= 0.6.0
  hs-source-dirs:      src,
                       src/Data/Morgue 
  --ghc-options:         -Wall
  default-language:    Haskell2010

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base,
                       morgue,
                       hspec,
                       QuickCheck
