name:                morgue
version:             1.0.0.0
synopsis:            markdown org replacement
description:         A tool to parse markdown files in a specific format and generate agendas, todo-lists etc.
homepage:            http://www.github.com/ibabushkin/morgue
license:             BSD3
license-file:        LICENSE
author:              Inokentiy Babushkin
maintainer:          inokentiy.babushkin@googlemail.com
copyright:           Copyright: (c) 2015 - 2016 Inokentiy Babushkin
category:            Data
build-type:          Simple
extra-source-files:  README.md,
                     templates/both.mustache,
                     templates/element.mustache,
                     templates/timed.mustache,
                     templates/todo.mustache,
                     templates/tree.mustache
cabal-version:       >=1.10

flag documentation
  default:  False

library
  hs-source-dirs:    src
  exposed-modules:   Data.Morgue.Agenda,
                     Data.Morgue.Agenda.Generator,
                     Data.Morgue.Agenda.Render,
                     Data.Morgue.Agenda.Time,
                     Data.Morgue.Agenda.Types,
                     Data.Morgue.Options
  --build-depends:     attoparsec >= 0.13.1.0,
  build-depends:     aeson >= 1.0.2.1,
                     base >= 4.9,
                     cmark >= 0.5.3.1,
                     containers >= 0.5.7.1,
                     megaparsec >= 5.1,
                     stache >= 0.2.0,
                     text >= 1.2.2.1,
                     time >= 1.6.0.0
                     --ansi-terminal >= 0.6.0
  ghc-options:       -Wall
  default-language:  Haskell2010
  if flag(documentation)
      build-depends: hscolour >= 1.20

executable morgue-dump
  hs-source-dirs:    app
  main-is:           Dump.hs
  build-depends:     base >= 4.9,
                     cmark >= 0.5.3.1,
                     morgue,
                     text >= 1.2.2.1
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010

executable morgue
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base >= 4.9,
                     morgue
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010

test-suite spec
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  other-modules:     TemplateSpec,
                     ToJSONSpec
  main-is:           Spec.hs
  build-depends:     base,
                     morgue,
                     stache,
                     hspec,
                     QuickCheck
